# Riemann

./: .dockerignore  .gitignore  Dockerfile  README.md  bot.py  dockerfile  fly.toml  main.py  pyproject.toml  requirements.txt  summarize.py
.github/workflows/: fly.yml
Documents/Riemann-main/: .gitignore  README.md  requirements.txt
Documents/Riemann-main/src/: summarize.py  translate.py
Documents/blueprint-hackathon-2023/: package-lock.json  package.json
Documents/fran-repository/: package-lock.json  package.json
src/: __main__.py  bot.py  summarize.py  utils.py
src/Cogs/summarize/: __init__.py  __main__.py
src/Cogs/translate/: __main__.py
