[tool.poetry]
name = "riemann"
version = "0.1.0"
description = ""
authors = ["Tean Dopel"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
numpy = "^1.22.2"
replit = "^3.2.4"
revChatGPT = "^0.0.14"
emoji = "^2.2.0"
types-emoji = "^2.1.0"
"discord.py" = "^2.1.1"
discord = "^2.1.0"
openai = {version = "^0.26.5", extras = ["embeddings", "datalib"]}
tiktoken = "^0.2.0"
sklearn = "0.0.post1"
python-dotenv = "^1.0.0"
iso-language-codes = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
